[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/game/entity/edge_collision/edge_collision.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[node name="EdgeCollision" type="StaticBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )

[node name="TopShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BottomShape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="LeftShape" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="RightShape" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )
